pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-569-links.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/569-links.md
---
]8;;file://HOSTNAME/ROOT/url2\[34mfoo[0m]8;;\]8;;file://HOSTNAME/ROOT/url1\[34mbaz[0m]8;;\
