pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-574-images.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/574-images.md
---
[35mfoo[0m ]8;;file://HOSTNAME/ROOT/url\[34mbar[0m]8;;\[35m[1][0m

[35m[1]: [0m]8;;file://HOSTNAME/ROOT/url2\[35m/url2[0m]8;;\
