pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-576-images.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/576-images.md
---
[35mfoo[0m[3m[35m bar[0m[35m[1][0m

[35m[1]: [0m]8;;file://HOSTNAME/WORKING_DIRECTORY/tests/markdown/commonmark-spec/train.jpg\[35mtrain.jpg[0m]8;;\[35m train & tracks[0m
